--- a/besmart/client/css/home.css
+++ b/besmart/client/css/home.css
@@ -424,6 +424,29 @@ nav {
 	transition: 0.2s all ease-in-out;
 }
 
+main {
+	display: grid;
+	min-height: 100vh;
+	grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: repeat(6, 1fr);
+}
+
+.canvas__wrapper {
+    display: flex;
+	grid-row-start: 2;
+	grid-column-start: 2;
+	grid-column-end: 6;
+	border: 1px solid black;
+	background-color: #0606bc;
+	border-radius: 5px;
+	flex-direction: column;
+}
+
+.canvas__wrapper canvas {
+	width: 100%;
+    height: 100%;
+}
+
 @media only screen and (min-width: 640px) {
     .searchbox__wrapper {
         justify-content: flex-start;
