added method to exemplify canvas

--- a/besmart/client/css/home.css
+++ b/besmart/client/css/home.css
@@ -427,7 +427,7 @@ nav {
 main {
 	display: grid;
 	min-height: 100vh;
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: 0.1fr repeat(2, 1fr);
 	grid-template-columns: repeat(6, 1fr);
 }
 
